--- a/11-docker-compose/03-full-stack/docker-compose.yaml
+++ b/11-docker-compose/03-full-stack/docker-compose.yaml
@@ -24,7 +24,25 @@ services:
     networks:
       - pingnet-dmz
 
-  pingfederate:
+  pingfederate2:
+    image: pingidentity/pingfederate:${PING_IDENTITY_DEVOPS_TAG}
+    command: wait-for pingdirectory:389 -t 300 -- entrypoint.sh start-server
+    environment:
+      - SERVER_PROFILE_URL=https://github.com/bswinson777/rsademo3.git
+      - SERVER_PROFILE_PATH=baseline/pingfederate
+    env_file:
+      - ~/.pingidentity/devops
+    #volumes:
+    #  - ${HOME}/projects/devops/volumes/full-stack.pingfederate2:/opt/out
+    #  - ${HOME}/projects/devops/pingidentity-server-profiles/baseline/pingfederate2:/opt/in
+    ports:
+      - 9032:9032
+      - 9998:9998
+    networks:
+      - pingnet-dmz
+      - pingnet-internal
+
+  pingfederate1:
     image: pingidentity/pingfederate:${PING_IDENTITY_DEVOPS_TAG}
     command: wait-for pingdirectory:389 -t 300 -- entrypoint.sh start-server
     environment:
